--- a/aircraft.cbp
+++ b/aircraft.cbp
@@ -26,17 +26,26 @@
 		<Linker>
 			<Add option="`sdl-config --libs` -lSDL_image -lSDL_ttf" />
 		</Linker>
+		<Unit filename="include/aircraft.h" />
 		<Unit filename="include/application.h" />
 		<Unit filename="include/core.h" />
+		<Unit filename="include/enemy.h" />
 		<Unit filename="include/event.h" />
 		<Unit filename="include/image.h" />
+		<Unit filename="include/interfaces.h" />
 		<Unit filename="include/main.h" />
 		<Unit filename="include/screen.h" />
+		<Unit filename="include/shot.h" />
+		<Unit filename="include/world.h" />
+		<Unit filename="src/aircraft.cpp" />
 		<Unit filename="src/application.cpp" />
+		<Unit filename="src/enemy.cpp" />
 		<Unit filename="src/event.cpp" />
 		<Unit filename="src/image.cpp" />
 		<Unit filename="src/main.cpp" />
 		<Unit filename="src/screen.cpp" />
+		<Unit filename="src/shot.cpp" />
+		<Unit filename="src/world.cpp" />
 		<Extensions>
 			<envvars />
 			<code_completion />
