--- a/aircraft.cbp
+++ b/aircraft.cbp
@@ -20,6 +20,7 @@
 			</Target>
 		</Build>
 		<Compiler>
+			<Add option="-O3" />
 			<Add option="-Wall" />
 			<Add option="`sdl-config --cflags` -Iinclude" />
 		</Compiler>
