world script working, but there is some memory errors.

--- a/aircraft.cbp
+++ b/aircraft.cbp
@@ -39,6 +39,7 @@
 		<Unit filename="include/image.h" />
 		<Unit filename="include/interfaces.h" />
 		<Unit filename="include/item.h" />
+		<Unit filename="include/level.h" />
 		<Unit filename="include/main.h" />
 		<Unit filename="include/screen.h" />
 		<Unit filename="include/shot.h" />
@@ -53,6 +54,7 @@
 		<Unit filename="src/hud.cpp" />
 		<Unit filename="src/image.cpp" />
 		<Unit filename="src/item.cpp" />
+		<Unit filename="src/level.cpp" />
 		<Unit filename="src/main.cpp" />
 		<Unit filename="src/screen.cpp" />
 		<Unit filename="src/shot.cpp" />
