--- a/aircraft.cbp
+++ b/aircraft.cbp
@@ -6,26 +6,68 @@
 		<Option pch_mode="2" />
 		<Option compiler="gcc" />
 		<Build>
-			<Target title="Default">
-				<Option output="bin/aircraft" prefix_auto="1" extension_auto="1" />
-				<Option object_output=".obj/" />
+			<Target title="Debug">
+				<Option output="bin/Debug/aircraft" prefix_auto="1" extension_auto="1" />
+				<Option object_output=".objs/Debug/" />
 				<Option type="1" />
 				<Option compiler="gcc" />
+				<Option projectLinkerOptionsRelation="2" />
+				<Compiler>
+					<Add option="-g" />
+					<Add option="`sdl-config --cflags`" />
+				</Compiler>
+				<Linker>
+					<Add option="`sdl-config --libs`" />
+				</Linker>
+			</Target>
+			<Target title="Release">
+				<Option output="bin/Release/aircraft" prefix_auto="1" extension_auto="1" />
+				<Option object_output=".objs/Release/" />
+				<Option type="0" />
+				<Option compiler="gcc" />
+				<Option projectLinkerOptionsRelation="2" />
 				<Compiler>
 					<Add option="-O2" />
+					<Add option="`sdl-config --cflags`" />
 				</Compiler>
 				<Linker>
 					<Add option="-s" />
+					<Add option="`sdl-config --libs`" />
 				</Linker>
+			</Target>
+			<Target title="WinRelease">
+				<Option output="bin/WinRelease/aircraft.exe" prefix_auto="1" extension_auto="0" />
+				<Option object_output=".objs/WinRelease/" />
+				<Option type="0" />
+				<Option compiler="mingw32_compiler" />
+				<Option projectLinkerOptionsRelation="2" />
+				<Compiler>
+					<Add option="-O2" />
+					<Add directory="../windows-cross/include" />
+				</Compiler>
+				<Linker>
+					<Add option="-s" />
+					<Add library="mingw32" />
+					<Add library="SDLmain" />
+					<Add library="SDL" />
+					<Add directory="../windows-cross/lib" />
+				</Linker>
+				<ExtraCommands>
+					<Add after="cp ../windows-cross/runtime/*.dll bin/WinRelease/" />
+				</ExtraCommands>
 			</Target>
 		</Build>
 		<Compiler>
+			<Add option="-Os" />
 			<Add option="-O3" />
 			<Add option="-Wall" />
-			<Add option="`sdl-config --cflags` -Iinclude" />
+			<Add directory="include" />
 		</Compiler>
 		<Linker>
-			<Add option="`sdl-config --libs` -lSDL_image -lSDL_ttf -lSDL_mixer" />
+			<Add option="-s" />
+			<Add library="SDL_image" />
+			<Add library="SDL_ttf" />
+			<Add library="SDL_mixer" />
 		</Linker>
 		<Unit filename="include/aircraft.h" />
 		<Unit filename="include/application.h" />
